--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "commit": "node scripts/smart-commit.js",
-    "c": "node scripts/smart-commit.js"
+    "c": "node scripts/smart-commit.js",
+    "setup-db": "node scripts/setup-database.js"
   },
   "keywords": [
     "articles",
@@ -29,7 +30,9 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.8",
